--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "node-sass": "^7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
-    "react-slick": "^0.29.0",
-    "sass": "^1.56.1",
-    "slick-carousel": "^1.8.1"
+    "sass": "^1.56.1"
   }
 }
