--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
-    "sass": "^1.56.1"
+    "react-slick": "^0.29.0",
+    "sass": "^1.56.1",
+    "slick-carousel": "^1.8.1"
   }
 }
