--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "sass": "^1.56.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.5"
   }
 }
