--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.24",
     "antd": "^5.0.5",
     "axios": "^1.2.1",
+    "formik": "^2.2.9",
     "next": "13.0.4",
     "node-sass": "^7.0.3",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "yup": "^0.32.11"
   }
 }
