--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.1",
     "formik": "^2.2.9",
     "next": "13.0.4",
+    "next-redux-wrapper": "^8.0.0",
     "node-sass": "^7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
