--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.24",
     "antd": "^5.0.5",
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "next": "13.0.4",
     "next-redux-wrapper": "^8.0.0",
