--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.0.5",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
+    "dotenv-next": "^0.1.24",
     "formik": "^2.2.9",
     "next": "13.0.4",
     "next-redux-wrapper": "^8.0.0",
