--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.24",
     "antd": "^5.0.5",
     "axios": "^1.2.1",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "dotenv-next": "^0.1.24",
     "formik": "^2.2.9",
