deps: обновил зависимости

--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
-    "@types/react-redux": "^7.1.24",
-    "antd": "^5.0.5",
-    "axios": "^1.2.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
+    "antd": "^5.8.3",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "dotenv-next": "^0.1.24",
-    "formik": "^2.2.9",
-    "next": "13.0.4",
-    "next-redux-wrapper": "^8.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
+    "formik": "^2.4.3",
+    "next": "^13.4.15",
+    "next-redux-wrapper": "^8.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
-    "sass": "^1.56.1",
+    "sass": "^1.65.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^9.0.5",
-    "yup": "^0.32.11"
+    "swiper": "^10.1.0",
+    "yup": "^1.2.0"
   }
 }
