--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-linkify-it": "^1.0.8",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
