--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^10.1.0",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.16"
   }
 }
