--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,10 @@ upstream nextjs {
   server nextjs:3000;
 }
 
+upstream nextjs_admin {
+  server localhost:3010;
+}
+
 server {
   listen 80 default_server;
 
@@ -39,6 +43,10 @@ server {
     proxy_ignore_headers Cache-Control;
     proxy_cache_valid 60m;
     proxy_pass http://nextjs;
+  }
+
+  location /admin {
+    proxy_pass http://nextjs_admin;
   }
 
   # DYNAMIC ASSETS - NO CACHE
