fix: default.conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,10 @@ upstream nextjs_admin {
   server 185.84.162.53:3010;
 }
 
+upstream api {
+  server 185.84.162.53:3002;
+}
+
 server {
   listen 80 default_server;
 
@@ -47,6 +51,10 @@ server {
 
   location /admin {
     proxy_pass http://nextjs_admin;
+  }
+
+  location /api {
+    proxy_pass http://api;
   }
 
   # DYNAMIC ASSETS - NO CACHE
